--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-JWT_SECRET="HGHBHJBkn kihnbnsjhvucnhvgccn jbiknkq nsqhshjd jhbcjhvwqhiqhs qquiqqiusbqjkbquiuqjbqjwbiqwbkqs"
-NODE_ENV="development"
-DATABASE_CLIENT="mysql"
-DATABASE_HOST="127.0.0.1"
-DATABASE_PORT=3306
-DATABASE_USER="root"
-DATABASE_PASSWORD="root"
-DATABASE_NAME="accounttask"
-TEST_DB=testdb
+JWT_SECRET=""
+NODE_ENV=''
+DATABASE_CLIENT=''
+DATABASE_HOST=''
+DATABASE_PORT=0
+DATABASE_USER=''
+DATABASE_PASSWORD=''
+DATABASE_NAME=''
+TEST_DB=''
