--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "npx tsc",
     "start": "node dist/server.js",
     "dev": "nodemon ./src/server.ts",
     "pretest": "dotenv -e .env.test -- ./node_modules/.bin/knex --knexfile src/database/knexfile.ts migrate:latest",
